--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AppWeb250206</title>
+
+    <!--上傳用第一行，測試用第二行-->
+
     <base href="/Website/" />
     <!--<base href="/ " />-->
+
+    <!------->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
